--- a/style.css
+++ b/style.css
@@ -275,6 +275,49 @@ nav {
     color: #F948B2;
 }
 
+/* Careers style */
+.career-section {
+    max-height: 821px;
+    width: 100%;
+    background: linear-gradient(90deg, #FF42A5 13.13%, #FF42A5 87.94%);
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+}
+
+.career-contener {
+    margin-left: 100px;
+    margin-right: 10px;
+}
+
+.career-contener h3 {
+    color: #FFF;
+    font-size: 48px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.career-contener>p {
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.career-contener .btn {
+    color: #F948B2;
+}
+
+.career-items {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+
+
 
 /* Responsive For Mobile Devices */
 @media screen and (max-width: 567px) {
@@ -284,7 +327,8 @@ nav {
     .hero,
     .gamer,
     .funny-cards,
-    .play-section {
+    .play-section,
+    .career-section {
         flex-direction: column;
     }
 
@@ -334,7 +378,19 @@ nav {
         width: 200px;
     }
 
-    .play-img img {
+    .play-img,
+    img {
         width: 100%;
+    }
+
+    .career-section {
+        height: auto;
+    }
+
+    .career-contener {
+        margin-left: 0;
+        margin-right: 0;
+        padding: auto;
+        flex-wrap: wrap;
     }
 }
