--- a/style.css
+++ b/style.css
@@ -315,7 +315,80 @@ nav {
     flex-wrap: wrap;
 }
 
+/* buttons section style */
+.buttons-sections {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 25px 10px;
+}
 
+.buttons-section {
+    width: 243px;
+    height: 80px;
+    border-radius: 50px;
+    background: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    transition: border 1.5s;
+}
+
+.buttons-section:hover {
+    border: 2px solid #FF42A5;
+    transform: border 1.5s;
+}
+
+/* Contact us */
+.contactUs {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+}
+
+.contactUs form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+/* footer style */
+footer {
+    text-align: center;
+    background: #0B0223;
+    width: 100%;
+    height: 636px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .nav-logo span {
+    color: #F948B2;
+}
+
+footer li {
+    color: #fff;
+    list-style: none;
+    cursor: pointer;
+}
+
+.footer-items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
 
 
 
@@ -378,8 +451,7 @@ nav {
         width: 200px;
     }
 
-    .play-img,
-    img {
+    .play-img img {
         width: 100%;
     }
 
@@ -392,5 +464,11 @@ nav {
         margin-right: 0;
         padding: auto;
         flex-wrap: wrap;
+        height: auto;
+    }
+
+    .career-img img {
+        width: 80%;
+        margin: auto;
     }
 }
